Kubernetes/KubernetesDocs/Projects/fullstack-sample-app/inspicon-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inspicon-frontend
  name: inspicon-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inspicon-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inspicon-frontend
    spec:
      containers:
        - image: hashicorp/http-echo
          args:
            - "-text=Hello from Inspicon Frontend"
          name: http-echo
          ports:
            - containerPort: 5678
