Kubernetes/KubernetesDocs/Projects/fullstack-sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspicon-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: inspicon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inspicon-frontend
                port:
                  number: 80
    - host: backend.inspicon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inspicon-backend
                port:
                  number: 80
